--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,31 +1,27 @@
 <html>
-    <head>
-        {% if title %}
-        <title>{{ title }} - microblog</title>
-        {% else %}
-        <title>microblog</title>
-        {% endif %}
-    </head>
-    <body>
+    <title>
+		{% block title %}{% endblock %} NYU AppSec - Assign2
+	</title>
+    <section class="menuBar">
         <div>
-            Microblog:
-            <a href="{{ url_for('index') }}">Home</a>
-            {% if current_user.is_anonymous %}
-            <a href="{{ url_for('login') }}">Login</a>
-            {% else %}
-            <a href="{{ url_for('logout') }}">Logout</a>
-            {% endif %}
-        </div>
-        <hr>
-        {% with messages = get_flashed_messages() %}
-        {% if messages %}
-        <ul>
-            {% for message in messages %}
-            <li>{{ message }}</li>
-            {% endfor %}
-        </ul>
-        {% endif %}
-        {% endwith %}
+			<a href="{{ url_for('index') }}">Home</a>
+			{% if current_user.is_anonymous %}
+			<a href="{{ url_for('login') }}">Login</a>
+			{% else %}
+			<a href="{{ url_for('logout') }}">Logout</a>
+			{% endif %}
+			<a href="{{ url_for('spellcheck') }}">Spellcheck</a>
+		</div>
+		<hr>
+	</section>
+	<section class="content">
+		<head>
+			{% block header %}{% endblock %}
+		</head>
+		
+		{% for message in get_flashed_messages() %}
+			<div class="messages">{{ message }}</div>
+		{% endfor %}
         {% block content %}{% endblock %}
-    </body>
+    </section>    
 </html>
