--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -3,16 +3,16 @@
 {% block header %}
 	<h1>{% block title %}
 	{% if current_user.is_anonymous %}
-    AppSec
+    NYU AppSec
     {% else %}
-    Welcome! {{ current_user.username }}!
+    Hello, {{ current_user.uname }}!
     {% endif %}
 	{% endblock %}</h1>
 {% endblock %}
 
 {% block content %}
-	<p>One Stop Shop for Spell Checking.</p>
-	<p>Login:  <a href="{{ url_for('login') }}">login</a></p>
-	<p>Register: <a href="{{ url_for('register') }}">register</a></p>
+	<p>This is a spellchecker flask web app.</p>
+	<p>In order to use the spellchecker <a href="{{ url_for('login') }}">login</a></p>
+	<p>Create an account <a href="{{ url_for('register') }}">register</a></p>
 
 {% endblock %}
