--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -5,35 +5,34 @@
 {% endblock %}
 
 {% block content %}
-    {% if 'Success' in login_flash %}
-		<p>Now you can try <a href="{{ url_for('spellcheck') }}">SpellCheck</a></p>
+ 	{% if 'Success' in loginResult %}
+		<p>You can now run your <a href="{{ url_for('spellcheck') }}">SpellCheck</a></p>
 	{% endif %}
     <form action="" method="post" novalidate>
         {{ form.hidden_tag() }}
         <p>
-            {{ form.username.label }}<br>
-            {{ form.username(size=32) }}<br>
-            {% for error in form.username.errors %}
-            <span style="color: red;">[{{ error }}]</span>
-            {% endfor %}
+            {{ form.uname.label }}<br>
+            {{ form.uname(size=32) }}
+			{% for error in form.uname.errors %}
+			<span style="color: red;">[{{ error }}]</span>
+			{% endfor %}
         </p>
         <p>
-            {{ form.password.label }}<br>
-            {{ form.password(size=32) }}<br>
-            {% for error in form.password.errors %}
-            <span style="color: red;">[{{ error }}]</span>
-            {% endfor %}
+            {{ form.pword.label }}<br>
+            {{ form.pword(size=32) }}
+			{% for error in form.pword.errors %}
+			<span style="color: red;">[{{ error }}]</span>
+			{% endfor %}
         </p>
         <p>
-            {{ form.password_2fa.label }}<br>
-            {{ form.password_2fa(size=32) }}<br>
-            {% for error in form.password_2fa.errors %}
+            {{ form.twoFA.label }}<br>
+            {{ form.twoFA(size=11) }}
+            {% for error in form.twoFA.errors %}
             <span style="color: red;">[{{ error }}]</span>
             {% endfor %}
         </p>
-        <p>{{ form.remember_me() }} {{ form.remember_me.label }}</p>
         <p>{{ form.submit() }}</p>
     </form>
-     <p>New User? <a href="{{ url_for('register') }}">Click to Register!</a></p>
-     <div id="result" style="display: none;">{{ login_flash }}</div>
+	<p>New User... <a href="{{ url_for('register') }}">Click to Register...</a></p>
+	<div id="result" style="display: none;">{{ loginResult }}</div>
 {% endblock %}
